# Macosko-Pipelines

./: .gitattributes  .gitignore  Dockerfile  README.md  bcl2fastq.wdl  gcloud_build.sh
MULTI-seq/: NL9_1_1009_combo.csv  README.md  filter_fastq_PONI_2.cpp  filter_fastq_copy.cpp  filter_fastq_exactmatch.cpp  filter_fastq_v2.cpp  filter_fastq_v3.cpp  multiseq.r  multiseq_pipeline.R  multiseq_v2.r  run.sh  run_PONI.sh  run_v3.sh  tag__List_OL478_OL765.csv
bcl-convert/: Dockerfile  README.md  bcl-convert.ipynb  generate-samplesheet.py  make_sample_sheet.py  make_slide_tags_fastqs.wdl
bcl2fastq/: Dockerfile  bcl-convert.sh  bcl2fastq.ipynb  bcl2fastq.wdl
cellranger-count/: Dockerfile  cellranger-count.sh  cellranger-count.wdl  count.wdl
count/: Dockerfile  count.wdl
positioning/: Dockerfile  README.md  dbscan.R  helpers.R  load_matrix.R  positioning.R  positioning.wdl  run-positioning.R
puck-caller/: 01_generate_master_mask.py  02_transform_puck_images.py  03_call_bases.py  Dockerfile
reconstruction/: Dockerfile  README.md  fiducial_seq_blind_whitelist.py  helpers.py  knn.py  recon-count.jl  recon.py  reconstruction.wdl  reconstruction_blind.py
slide-tags/: Dockerfile  README.md  helpers.R  load_matrix.R  plots.R  positioning.R  run-positioning.R  spatial-count.jl
spatial-count/: spatial-count.jl  spatial-count.wdl
terra/: README.md  cellranger-count.wdl  dropsift.wdl  reconstruction.wdl  results.py  slide-tags.wdl  submit.py  vireo-memory-efficient.wdl
tools/: bam2tags.jl  cgrid.R  helpers.wdl  (+2 more)
variants/bamscrape/: Cargo.toml  helpers.rs  main.rs
(+62 files in other folders)
