[package]
name = "bamscrape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = { version = "0.49.0", default-features = false }
memmap2 = "0.9.4"
csv = "1.3.0"
hdf5 = "0.8.1"
itertools = "0.13.0"
num-traits = "0.2.18"
